--- a/Wishlist.html
+++ b/Wishlist.html
@@ -12,11 +12,56 @@
     <link rel="stylesheet" href="./src/css/style.css" />
   </head>
   <body>
-    <load
-      src="./partials/header.html"
-      icon-path="./img/sprite.svg#logo"
-      highlight-wishlist="nav__link--active"
-    />
+    <header class="header">
+  <div class="container header__container">
+    <a class="logo" href="./index.html" aria-label="Site logo">
+      <svg class="logo__icon" width="100" height="30">
+        <use href="{=$icon-path}"></use>
+      </svg>
+    </a>
+
+    <form class="search-form">
+      <input
+        class="search-form__input"
+        type="text"
+        name="searchValue"
+        placeholder="Enter product name"
+      />
+      <button
+        type="button"
+        class="search-form__btn-clear"
+        aria-label="Clear search"
+      >
+        ×
+      </button>
+      <button class="search-form__btn" type="submit">Search</button>
+    </form>
+
+    <nav class="nav">
+      <ul class="nav__list">
+        <li class="nav__item">
+          <a class="nav__link {=$highlight-home}" href="./index.html">Home</a>
+        </li>
+        <li class="nav__item">
+          <a class="nav__link {=$highlight-cart}" href="./cart.html">
+            Cart
+            <span class="nav__count" data-cart-count>0</span>
+            <!-- Динамічне число -->
+          </a>
+        </li>
+        <li class="nav__item">
+          <a class="nav__link {=$highlight-wishlist}" href="./wishlist.html">
+            Wishlist
+            <span class="nav__count" data-wishlist-count>0</span>
+            <!-- Динамічне число -->
+          </a>
+        </li>
+      </ul>
+    </nav>
+    <button class="theme-toggle-btn" aria-label="Toggle theme"></button>
+  </div>
+</header>
+
 
     <main>
       <section class="section">
@@ -51,7 +96,23 @@
         </div>
       </section>
     </main>
-    <load src="./partials/modal.html" />
-    <script type="module" src="./wishlist.js"></script>
+    <div class="modal">
+  <div class="modal__content">
+    <button class="modal__close-btn" type="button"></button>
+    <div class="modal-product"></div>
+    <div class="modal-product__actions">
+      <button
+        class="modal-product__btn modal-product__btn--wishlist"
+        type="button"
+      >
+        Add to Wishlist
+      </button>
+      <button class="modal-product__btn modal-product__btn--cart" type="button">
+        Add to Cart
+      </button>
+    </div>
+  </div>
+</div>
+    <script type="module" src="./src/js/wishlist.js"></script>
   </body>
 </html>
